# LOL-PaperReader

./: .dockerignore  .gitignore  ARCHITECTURE_DIAGRAM.md  BACKEND_API_REPORT.md  BRANCHING_GUIDELINES.md  CHANGELOG.md  CITATION_BBOX_INTEGRATION.md  CITATION_EXTRACTION_INTEGRATION.md  CITATION_FEATURE_SUMMARY.md  CITATION_HIGHLIGHTING_IMPROVEMENTS.md  CITATION_POPUP_ANALYSIS.md  CITATION_TO_REFERENCE_GUIDE.md  CLAUDE.md  CODING_PRACTICES.md  DATA_STORAGE_GUIDE.md  DOCKER_BUILD_GUIDE.md  DOCKER_QUICK_START.md  Dockerfile  FEATURES_ADDED.md  FRONTEND_FLOW.md  FULL_REFERENCE_TEXT_FIXED.md  INTEGRATION_EXAMPLE.tsx  MERGE_REQUEST_GUIDELINES.md  MOCK_DATA_FIXED.md  NOTE.md  PDFJS_CITATION_ENHANCEMENT.md  PDFJS_SERVER_SIDE_SETUP.md  QUICK_START_CITATION_DETECTION.md  QUICK_START_HIGHLIGHTS.md  README-docker.md  README.md  README_DOCKER.md  REAL_REFERENCES_READY.md  REFERENCE_LINKING_PLAN.md  REFERENCE_PARSER_USAGE.md  REPOSITORY_GUIDELINEs.md  SETUP_GUIDE.md  SKIMMING_HIGHLIGHTS_GUIDE.md  SKIMMING_INTEGRATION_GUIDE.md  SKIMMING_MECHANISM.md  (+23 more)
backend/: CHANGELOG_IMAGE_QA.md  CHANGELOG_RERANKING.md  CHAT_EMBEDDING_README.md  CHAT_EMBEDDING_UPDATE_README.md  CHAT_HISTORY_TEST_README.md  CHAT_README.md  Dockerfile  ENHANCED_CHAT_IMPLEMENTATION.md  IMAGE_QA_GUIDE.md  README.md  RERANKING_GUIDE.md  SIMPLE_CHAT_EMBEDDING_README.md  SYSTEM_FIXES_README.md  TROUBLESHOOTING.md  api_chat_history_evaluation_report_20251023_042348.json  environment.yml  example_image_qa_usage.py  example_rerank_qa.py  init-db.sql  main.py  pyproject.toml  requirements.txt  run_chat_history_tests.py  (+21 more)
(+479 files in other folders)
