[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paperreader"
version = "0.1.0"
description = "Backend for LOL PaperReader"
requires-python = ">=3.10"

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
  "docling",
]

[project.optional-dependencies]
dev = [
  "uv",
  "black",
  "ruff",
  "pytest",
  "httpx"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
